Fixing english translation.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -19,6 +19,8 @@ en:
       title: country
     time:
       title: time
+    date:
+      title: date
     observer:
       title: observer
       real: real
@@ -147,6 +149,6 @@ en:
     temperature:
       title: temperature
     dew_point:
-      title: punto di rugiada
+      title: dew point
     remarks:
-      title: annotazioni
+      title: remarks
