Adding en translation for weather.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -146,6 +146,7 @@ en:
       light thunderstorm and unknown phenomenon: light thunderstorm and unknown phenomenon
       heavy unknown phenomenon: heavy unknown phenomenon
       light unknown phenomenon: light unknown phenomenon
+      no significant weather: no significant weather
     temperature:
       title: temperature
     dew_point:
